--- a/nextflow.config
+++ b/nextflow.config
@@ -151,12 +151,13 @@ profiles {
     test_full { includeConfig 'conf/test_full.config' }
 }
 
-// Set default registry for Docker and Podman independent of -profile
-// Will not be used unless Docker / Podman are enabled
+// Set default registry for Apptainer, Docker, Podman and Singularity independent of -profile
+// Will not be used unless Apptainer / Docker / Podman / Singularity are enabled
 // Set to your registry if you have a mirror of containers
-singularity.registry = 'quay.io'
+apptainer.registry   = 'quay.io'
 docker.registry      = 'quay.io'
 podman.registry      = 'quay.io'
+singularity.registry = 'quay.io'
 
 // Nextflow plugins
 plugins {
@@ -205,7 +206,7 @@ manifest {
     name            = 'ecv/baitcheck'
     author          = """@Joon-Klaps"""
     homePage        = 'https://github.com/ecv/baitcheck'
-    description     = """A nextflow pipeline that does an in silico simulation of the baits binding to reference genomes"""
+    description     = """A nextflow pipeline to run an in silico simulation of baits mapping to references"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
     version         = '1.0dev'
