--- a/conf/modules.config
+++ b/conf/modules.config
@@ -18,12 +18,12 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
-    withName: SAMPLESHEET_CHECK {
-        publishDir = [
-            path: { "${params.outdir}/pipeline_info" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
+    withName: SAMTOOLS_SORT {
+        ext.prefix = { "${meta.id}.sorted" }
+    }
+
+    withName: SAMTOOLS_SORT {
+        ext.prefix = { "${meta.id}.sorted" }
     }
 
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
@@ -33,5 +33,4 @@ process {
             pattern: '*_versions.yml'
         ]
     }
-
 }
