--- a/nextflow.config
+++ b/nextflow.config
@@ -9,10 +9,11 @@
 // Global default params, used in configs
 params {
 
-    // TODO nf-core: Specify your pipeline's command line flags
     // Input options
     input                      = null
     baits                      = null
+    kaiju_db                   = "https://kaiju-idx.s3.eu-central-1.amazonaws.com/2023/kaiju_db_rvdb_2023-05-26.tgz"
+    kaiju_rank                 = "species"
 
     // MultiQC options
     multiqc_config             = null
